--- a/MagiConvert/MagiConvert.csproj
+++ b/MagiConvert/MagiConvert.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5770B3FA-62D5-4DCF-BE46-56C733248C44}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>PictoPNG</RootNamespace>
-    <AssemblyName>PictoPNG</AssemblyName>
+    <RootNamespace>MagiConvert</RootNamespace>
+    <AssemblyName>MagiConvert</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -47,6 +47,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -80,6 +83,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Filter.flt" />
     <None Include="Properties\Settings.settings">
